# UTS-SistemTerdistribusi

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
publisher/: Dockerfile
publisher/src/: main.py
src/: consumer.py  main.py  models.py  publisher_script.py  stats.py  store.py
src/dedup_aggregator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_dedup.py  test_persistence.py  test_schema.py  test_stress.py
